Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,19 +509,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Mathew RYAN',\n",
+       "[{'name': 'Antoine GRIEZMANN',\n",
        "  'captain': False,\n",
-       "  'shirt_number': 1,\n",
-       "  'position': 'Goalie'}]"
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Kylian MBAPPE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Ousmane DEMBELE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'}]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +563,7 @@
    "source": [
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
-    "player_with_highest_num = None\n",
+    "player_with_highest_num = []\n",
     "\n",
     "for feature in soccer_match:\n",
     "    for \n",
