Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -564,7 +564,10 @@
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
     "player_with_highest_num = None\n",
-    "\n",
+    "highest_num = 0\n",
+    "for team in soccer_match:\n",
+    "    for player in team['player']:\n",
+    "        if player['shirt_number']< highest_n\n",
     "\n",
     "for feature in soccer_match:\n",
     "    for \n",
