--- a/index.ipynb
+++ b/index.ipynb
@@ -567,8 +567,11 @@
     "highest_num = 0\n",
     "for team in soccer_match:\n",
     "    for player in team['player']:\n",
-    "        if player['shirt_number']< highest_n\n",
-    "\n",
+    "        if player['shirt_number']< highest_num:\n",
+    "            continue\n",
+    "        else\n",
+    "            highest_num= player['shirt_number']\n",
+    "if player['shirt_number']\n",
     "for feature in soccer_match:\n",
     "    for \n",
     "\n",
