--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,9 @@
     "            continue\n",
     "        else\n",
     "            highest_num= player['shirt_number']\n",
-    "if player['shirt_number']\n",
+    "if player['shirt_number'] == highest_num:\n",
+    "    player_with_highest_num = player['name']\n",
+    "player_with_highest\n",
     "for feature in soccer_match:\n",
     "    for \n",
     "\n",
