Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,9 +557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-99-09d5f2764601>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-99-09d5f2764601>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list and find the player with the highest shirt_number\n",
     "# assign the player with the highst shirt_number to player_with_highest_num variable\n",
@@ -567,17 +576,15 @@
     "highest_num = 0\n",
     "for team in soccer_match:\n",
     "    for player in team['player']:\n",
-    "        if player['shirt_number']< highest_num:\n",
+    "        if player['shirt_number'] < highest_num:\n",
     "            continue\n",
     "        else\n",
     "            highest_num= player['shirt_number']\n",
     "if player['shirt_number'] == highest_num:\n",
     "    player_with_highest_num = player['name']\n",
-    "player_with_highest\n",
-    "for feature in soccer_match:\n",
-    "    for \n",
+    "player_with_highest_num\n",
     "\n",
-    "searchForfuncreturnTeamPositiondict(\"home_team\",\"position\", True,\"Forward\")\n",
+    "\n",
     "# code goes here"
    ]
   },
