--- a/index.ipynb
+++ b/index.ipynb
@@ -578,7 +578,7 @@
     "    for player in team['player']:\n",
     "        if player['shirt_number'] < highest_num:\n",
     "            continue\n",
-    "        else\n",
+    "        else:\n",
     "            highest_num= player['shirt_number']\n",
     "if player['shirt_number'] == highest_num:\n",
     "    player_with_highest_num = player['name']\n",
