--- a/index.ipynb
+++ b/index.ipynb
@@ -600,6 +600,8 @@
     "# we want a list of all the names of the players in this match\n",
     "# but we want both first and last names to be formatted in title case\n",
     "player_names = None\n",
+    "for player in players:\n",
+    "    \n",
     "# code goes here"
    ]
   },
