Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -602,7 +602,8 @@
     "player_names = None\n",
     "\n",
     "for team in soccer_match:\n",
-    "    for player in team('player')\n",
+    "    for player in team('players'):\n",
+    "        \n",
     "# code goes here"
    ]
   },
