--- a/index.ipynb
+++ b/index.ipynb
@@ -599,10 +599,12 @@
     "# as we can see, the players all have their last names in all caps, as if they are being yelled\n",
     "# we want a list of all the names of the players in this match\n",
     "# but we want both first and last names to be formatted in title case\n",
-    "player_names = None\n",
+    "player_names = []\n",
     "\n",
     "for team in soccer_match:\n",
     "    for player in team('players'):\n",
+    "        titled_name = player['name'].title()\n",
+    "        player_names.append()\n",
     "        \n",
     "# code goes here"
    ]
